feat(exchange): daily fetch exchange rate
